--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="header">
       <div class="HeaderInto">
-        <img src="img/unnamed.png" alt=""  class="zet"/>
+        <img src="img/unnamed.png" alt="" class="zet" />
         <img
           src="img/align-justify.png"
           alt=""
@@ -23,54 +23,179 @@
         <img src="img/photo_2025-11-03_14-46-48.jpg" alt="" class="Me" />
       </div>
       <div class="text">
-        <p style="color: gray;">Hi, I'm </p>
-        <h3 style="color: black;">Karimzoda Mustafo,</h3>
-      <h1>
-         Frontend Developer
-      </h1>
-      <h3 style="color: black;"> from Tajikistan</h3>
+        <p style="color: gray">Hi, I'm</p>
+        <h3 style="color: black">Karimzoda Mustafo,</h3>
+        <h1>Frontend Developer</h1>
+        <h3 style="color: black">from Tajikistan</h3>
       </div>
       <div class="social">
-<img src="img/instagram.png" alt="" style="width: 25%;;">
-<img src="img/linkedin.png" alt="" style="width: 25%;">
-<img src="img/telegram (1).png" alt="" style="width: 25%;">
+        <img src="img/instagram.png" alt="" style="width: 25%" />
+        <img src="img/linkedin.png" alt="" style="width: 25%" />
+        <img src="img/telegram (1).png" alt="" style="width: 25%" />
       </div>
       <div class="AboutT">
-      <p style="color: gray; font-size: 30px;">About </p><p style="color: black; font-weight: bolder; font-size: 30px;">ME</p>
+        <p style="color: gray; font-size: 30px">About</p>
+        <p style="color: black; font-weight: bolder; font-size: 30px">ME</p>
       </div>
       <div class="AboutB">
-      <p>I am a beginner frontend developer.
-Currently, I am learning web development and building projects using HTML and CSS.
-I enjoy creating simple, clean, and user-friendly interfaces.
-My goal is to grow as a developer and work on real-world projects.</p>
-</div>
-
-<div class="Special">
-  <h2>Specialization</h2>
-</div>
-<div class="SpecBox">
-<div class="Spec"> <img src="img/free-icon-developer-8297197.png" alt="" style="width: 15%;"><p>Frontend Developer</p></div>
-<div class="Spec"><img src="img/free-icon-political-science-18857275.png" alt="" style="width: 15%;"><p>Political Science</p></div>
-<div class="Spec"> <img src="img/free-icon-legal-advice-18569896.png" alt="" style="width: 15%;"><p>Lawyer</p></div>
-</div>
- <div class="CV">
-      <button class="but">Download CV</button>
+        <p>
+          I am a beginner frontend developer. Currently, I am learning web
+          development and building projects using HTML and CSS. I enjoy creating
+          simple, clean, and user-friendly interfaces. My goal is to grow as a
+          developer and work on real-world projects.
+        </p>
       </div>
-      <p style="color: black; font-weight: bolder; font-size: 30px; display: flex; justify-content: center; padding-top: 50px;">My Skills</p>
 
-      <div class="MySkills">
-<div class="Skill s1"><img src="img/free-icon-html-5-174854.png" alt="" style="width: 60%;"></div>
-<div class="Skill s2"><img src="img/free-icon-css-3-732190.png" alt="" style="width: 60%;"></div>
-<div class="Skill s3"><img src="img/free-icon-js-5968292.png" alt="" style="width: 60%;"></div>
-<div class="Skill s4"><img src="img/free-icon-c-6132222.png" alt="" style="width: 60%;"></div>
-<div class="Skill s5"><img src="img/free-icon-commit-git-12514434.png" alt="" style="width: 60%;"></div>
-<div class="Skill s6"><img src="img/free-icon-github-2111425.png" alt="" style="width: 60%;"></div>
-<div class="Skill s7"><img src="img/free-icon-figma-5968705.png" alt="" style="width: 60%;"></div>
-<div class="Skill s8"><img src="img/free-icon-office-732222.png" alt="" style="width: 60%;"></div>
+      <div class="Special">
+        <h2>Specialization</h2>
       </div>
-      <div class="Body">
-      <h1 style="text-align: center;">Portfolio</h1>
-      <div class="PBOX"><p>EMPTY</p></div>
+      <div class="SpecBox">
+        <div class="Spec">
+          <img
+            src="img/free-icon-developer-8297197.png"
+            alt=""
+            style="width: 15%"
+          />
+          <p>Frontend Developer</p>
+        </div>
+        <div class="Spec">
+          <img
+            src="img/free-icon-political-science-18857275.png"
+            alt=""
+            style="width: 15%"
+          />
+          <p>Political Science</p>
+        </div>
+        <div class="Spec">
+          <img
+            src="img/free-icon-legal-advice-18569896.png"
+            alt=""
+            style="width: 15%"
+          />
+          <p>Lawyer</p>
+        </div>
+      </div>
+      <div class="CV">
+        <button class="but">Download CV</button>
+      </div>
+      <div class="Bodier">
+        <p
+          style="
+            color: white;
+            font-weight: bolder;
+            font-size: 30px;
+            display: flex;
+            justify-content: center;
+            padding-top: 50px;
+          "
+        >
+          My Skills
+        </p>
+
+        <div class="MySkills">
+          <div class="Skill s1">
+            <img
+              src="img/free-icon-html-5-174854.png"
+              alt=""
+              style="width: 60%"
+            />
+          </div>
+          <div class="Skill s2">
+            <img
+              src="img/free-icon-css-3-732190.png"
+              alt=""
+              style="width: 60%"
+            />
+          </div>
+          <div class="Skill s3">
+            <img src="img/free-icon-js-5968292.png" alt="" style="width: 60%" />
+          </div>
+          <div class="Skill s4">
+            <img src="img/free-icon-c-6132222.png" alt="" style="width: 60%" />
+          </div>
+          <div class="Skill s5">
+            <img
+              src="img/free-icon-commit-git-12514434.png"
+              alt=""
+              style="width: 60%"
+            />
+          </div>
+          <div class="Skill s6">
+            <img
+              src="img/free-icon-github-2111425.png"
+              alt=""
+              style="width: 60%"
+            />
+          </div>
+          <div class="Skill s7">
+            <img
+              src="img/free-icon-figma-5968705.png"
+              alt=""
+              style="width: 60%"
+            />
+          </div>
+          <div class="Skill s8">
+            <img
+              src="img/free-icon-office-732222.png"
+              alt=""
+              style="width: 60%"
+            />
+          </div>
+        </div>
+        <h1 style="text-align: center; margin-top: 50px">Portfolio</h1>
+        <div class="Body">
+          <div class="PBOX">
+            <p style="color: white; font-weight: bolder">EMPTY</p>
+          </div>
+        </div>
+
+        <div class="footer">
+          <div class="ContactME">
+            <h2>Contact me</h2>
+            <input type="text" name="" id="" class="input" placeholder="NAME" />
+            <input
+              type="email"
+              name=""
+              id=""
+              class="input"
+              placeholder="EMAIL"
+            />
+            <input
+              type="text"
+              name=""
+              id=""
+              class="input"
+              placeholder="PHONE NUMBER"
+            />
+            <input
+              type="text"
+              name=""
+              id=""
+              class="input"
+              placeholder="YOUR WEBSITE"
+            />
+            <textarea
+              name=""
+              id=""
+              class="input text1"
+              placeholder="How I can Help You"
+            ></textarea>
+            <button class="send">Send</button>
+          </div>
+        </div>
+        <div class="footerbottom">
+          <div class="zet2"><img src="img/unnamed.png" alt="" style="width: 15%;"></div>
+          <div class="services">
+            <p>Home</p>
+            <p>About ME</p>
+            <p>Skills</p>
+            <p>Contact me</p>
+          </div>
+          <div class="mail"><img src="img/free-icon-communication-15047587.png" alt="" ><p>mustafo.karimzoda@zet-mobile.com</p></div>
+          <div class="line"></div>
+          <div class="end"><p>Made by Karimzade_8222</p><p>2026</p></div>
+        </div>
+
       </div>
     </div>
   </body>
