--- a/index.html
+++ b/index.html
@@ -150,8 +150,9 @@
         </div>
 
         <div class="footer">
+          <h2 style="color: white; text-align: center; padding-top: 50px;">Contact me</h2>
           <div class="ContactME">
-            <h2>Contact me</h2>
+            
             <input type="text" name="" id="" class="input" placeholder="NAME" />
             <input
               type="email"
@@ -178,10 +179,10 @@
               name=""
               id=""
               class="input text1"
-              placeholder="How I can Help You"
+              placeholder="How I can Help You?"
             ></textarea>
-            <button class="send">Send</button>
           </div>
+          <div class="button"><button class="send">Send</button></div>
         </div>
         <div class="footerbottom">
           <div class="zet2"><img src="img/unnamed.png" alt="" style="width: 15%;"></div>
