--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p style="color: black; font-weight: bolder; font-size: 30px">ME</p>
       </div>
       <div class="AboutB">
-        <p>
+        <p style="cursor: unset; color: black;">
           I am a beginner frontend developer. Currently, I am learning web
           development and building projects using HTML and CSS. I enjoy creating
           simple, clean, and user-friendly interfaces. My goal is to grow as a
@@ -71,7 +71,7 @@
             alt=""
             style="width: 15%"
           />
-          <p>Frontend Developer</p>
+          <p style="cursor: unset; color: black;">Frontend Developer</p>
         </div>
         <div class="Spec">
           <img
@@ -79,7 +79,7 @@
             alt=""
             style="width: 15%"
           />
-          <p>Political Science</p>
+          <p style="cursor: unset; color: black;">Political Science</p>
         </div>
         <div class="Spec">
           <img
@@ -87,7 +87,7 @@
             alt=""
             style="width: 15%"
           />
-          <p>Lawyer</p>
+          <p style="cursor: unset; color: black;">Lawyer</p>
         </div>
       </div>
       <div class="CV">
