--- a/index.html
+++ b/index.html
@@ -162,6 +162,12 @@
           <div class="PBOX">
             <p style="color: white; font-weight: bolder">EMPTY</p>
           </div>
+          <div class="PBOX p2">
+            <p style="color: white; font-weight: bolder">EMPTY</p>
+          </div>
+          <div class="PBOX p3">
+            <p style="color: white; font-weight: bolder">EMPTY</p>
+          </div>
         </div>
 
         <div class="footer">
