--- a/index.html
+++ b/index.html
@@ -175,32 +175,32 @@
             Contact me
           </h2>
           <div class="ContactME">
-            <input type="text" name="" id="" class="input" placeholder="NAME" />
+            <input type="text" name="" id="" class="input 1" placeholder="NAME" />
             <input
               type="email"
               name=""
               id=""
-              class="input"
+              class="input i2"
               placeholder="EMAIL"
             />
             <input
               type="text"
               name=""
               id=""
-              class="input"
+              class="input i3"
               placeholder="PHONE NUMBER"
             />
             <input
               type="text"
               name=""
               id=""
-              class="input"
+              class="input i4"
               placeholder="YOUR WEBSITE"
             />
             <textarea
               name=""
               id=""
-              class="input text1"
+              class="input text1 i5"
               placeholder="How I can Help You?"
             ></textarea>
           </div>
